--- a/app/app/assets/stylesheets/application.css
+++ b/app/app/assets/stylesheets/application.css
@@ -1,15 +1,44 @@
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
- *
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
  * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
  * You're free to add application-wide styles to this file and they'll appear at the bottom of the
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
  *= require_tree .
  *= require_self
  */
+#doc_table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#doc_table tr {
+    border-bottom: 2px solid #aaa;
+}
+
+#doc_table td{
+    padding: 10px
+    vertical-align: middle;
+}
+
+#doc_table th{
+    background-color: #DDD
+}
+
+html *{
+   font-family: Verdana, Geneva, sans-serif;
+}
+
+#wrap_table {
+    display: block;
+}
+
+#wrap_table td {
+    display: inline-block;
+    padding: 7px;
+}
+
+
