--- a/app/app/views/home/start.html.erb
+++ b/app/app/views/home/start.html.erb
@@ -1,19 +1,7 @@
-<%if current_user.is_simple_user?%>
-  <p>Avaible options:</p>
-  <ul>
-    <li><%=link_to "View file categories", category_list_path%></li>
-  </ul>
+<%if flash[:notice]%>
+    <div class="notice" align="center">
+      <h2><font color="green"><%=flash[:notice]%></font></h2><hr/>
+    </div>
 <%end%>
-<%if current_user.is_moderator?%>
-  <p>Avaible options:</p>
-  <ul>
-    <li><%=link_to "View file categories", category_list_path%></li>
-  </ul>
-<%end%>
-<%if current_user.is_sysadmin? or current_user.is_admin?%>
-  <p>Avaible options:</p>
-  <ul>
-    <li><%=link_to "View users", user_list_path%></li>
-    <li><%=link_to "View file categories", category_list_path%></li>
-  </ul>
-<%end%>
+<h1>Welcome</h1>
+<h3>Your options are on the left, please choose one and continue from there!</h3>
