--- a/app/app/views/user/edit.html.erb
+++ b/app/app/views/user/edit.html.erb
@@ -1,32 +1,52 @@
-<%if current_user.is_simple_user? or current_user.is_moderator?%>
-  <strong>You are not allowed to view this page!!</strong>
-  <strong>Please go back <%=link_to "here", "/"%></strong>
-<%end%>
-<%if current_user.is_sysadmin? or current_user.is_admin?%>
-<%if @user==nil and params[:id]!=nil%>
+
+  <!--<strong>You are not allowed to view this page!!</strong>
+  <strong>Please go back <%=link_to "here", "/"%></strong>-->
+
+<%if !@user%>
   <strong>You are not allowed to access such informations!</strong>
-<%elsif @user==nil and params[:id]==nil%>
-  <strong>You must provide the id of the user whose details you want to edit!</strong>
 <%else%>
+<%if flash[:notice]%>
+    <div class="notice" align="center">
+      <h2><font color="green"><%=flash[:notice]%></font></h2><hr/>
+    </div>
+<%end%>
+<%if flash[:alert]%>
+    <div class="notice" align="center">
+      <h2><font color="red"><%=flash[:alert]%></font></h2><hr/>
+    </div>
+<%end%>
 <p><strong>User details</strong></p><br/>
 
 <%=form_tag({controller: "user", action: "update"}, method: "post") do |f|%>
   <%=label_tag "User id:"%><br/>
-  <%=text_field :user,:id, :readonly => true, :value =>@user.id%><br/>
+  <%=text_field :user,:id, :readonly => true, :value => @user.id%><br/>
   <%=label_tag "Email address:"%><br/>
   <%=text_field :user, :email, :readonly => true, :value => @user.email%><br/>
+<%if current_user.is_user? or current_user.is_moderator?%>
+  <%=label_tag "Old Password:"%><br/>
+  <%=password_field :user, :old_password%><br/>
+<%end%>
   <%=label_tag "New Password:"%><br/>
   <%=password_field :user, :password%><br/>
   <%=label_tag "Confirm Password:"%><br/>
   <%=password_field :user, :con_pass%><br/>
   <%=label_tag "User Type: "%>
-  <%if @user.user_type==nil%>
-    <%@type="user" %>
-  <%else%>
-    <%@type=@user.user_type%>
+  <%@type = @user.user_type%>
+  <%if current_user.is_user? or current_user.is_moderator?%>
+    <strong><%=current_user.user_type%></strong><br/>
   <%end%>
+  <%if current_user.is_sysadmin?%>
   <%=select_tag :user_type, options_for_select(['user','moderator','admin', 'sysadmin'],@type) %><br/>
+  <%end%>
+
+  <%if current_user.is_admin?%>
+    <%if current_user.id == @user.id%>
+      <%=select_tag :user_type, options_for_select(['user','moderator','admin'],@type) %><br/>
+    <%else%>
+      <%=select_tag :user_type, options_for_select(['user','moderator'],@type) %><br/>
+    <%end%>
+  <%end%>
+
   <%=button_tag "Save changes", {controller: "user", action:"update", method: "post"}%>
 <%end -%>
-<%end%>
 <%end%>
